--- a/copier.yml
+++ b/copier.yml
@@ -6,15 +6,15 @@ _envops:
   keep_trailing_newline: true
 
 _exclude:
-  - .editorconfig
-  - .gitattributes
-  - .mailmap
-  - copier.yml
-  - DCO.txt
-  - README.md
-  - NOTICE.txt
-  - LICENSE
-  - .git
+  - ./.editorconfig
+  - ./.gitattributes
+  - ./.mailmap
+  - ./copier.yml
+  - ./DCO.txt
+  - ./README.md
+  - ./NOTICE.txt
+  - ./LICENSE
+  - ./.git
 
 _templates_suffix: .jinja
 
